--- a/app.json
+++ b/app.json
@@ -1,7 +1,9 @@
 {
   "name": "test4",
   "scripts": {
-    "test": "bash buildpack-run.sh"
+    {
+      "test": "bash ./buildpack-run.sh"
+    }
   },
   "env": {
   },
